--- a/psp2/psp2.csproj
+++ b/psp2/psp2.csproj
@@ -23,13 +23,42 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app.css" />
+    <Content Include="aurelia.protractor.js" />
+    <Content Include="build\args.js" />
+    <Content Include="build\babel-options.js" />
+    <Content Include="build\paths.js" />
+    <Content Include="build\tasks\build.js" />
+    <Content Include="build\tasks\clean.js" />
+    <Content Include="build\tasks\dev.js" />
+    <Content Include="build\tasks\doc.js" />
+    <Content Include="build\tasks\e2e.js" />
+    <Content Include="build\tasks\lint.js" />
+    <Content Include="build\tasks\prepare-release.js" />
+    <Content Include="build\tasks\serve.js" />
+    <Content Include="build\tasks\test.js" />
+    <Content Include="build\tasks\watch.js" />
     <Content Include="index.html" />
+    <Content Include="src\animation-main.js" />
+    <Content Include="src\app.html" />
+    <Content Include="src\app.js" />
+    <Content Include="src\child-router.html" />
+    <Content Include="src\child-router.js" />
+    <Content Include="src\flickr.html" />
+    <Content Include="src\flickr.js" />
+    <Content Include="src\nav-bar.html" />
+    <Content Include="src\nav-bar.js" />
+    <Content Include="src\welcome.html" />
+    <Content Include="src\welcome.js" />
+    <Content Include="styles\styles.css" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="app.ts" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="doc\api.json" />
+    <Content Include="doc\CHANGELOG.md" />
+    <Content Include="README.md" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
